--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: rsdte
+title: 听说风很大
 description: A minimal and beautiful Jekyll theme best for writing and note-taking.
-author: rsdte
+author: 听说风很大
 avatar: /logo.png
 email: rsdte@foxmail.com
 
@@ -34,10 +34,10 @@ twitter:
   card: summary
 logo: logo.png
 social:
-  name: rsdte
-#  links:
-#    - https://twitter.com/ngzhio
-#    - https://www.facebook.com/ngzhio
-#    - https://github.com/ngzhio
+  name: 听说风很大
+  links:
+    # - https://twitter.com/ngzhio
+    # - https://www.facebook.com/ngzhio
+    - https://github.com/rsdte
 google_site_verification: u4WXQl0Eu66rsQo2kRdCNx
-lang: en
+lang: zh
